added i18n, chat updated, provided contact page

--- a/src/locales/translation-en.json
+++ b/src/locales/translation-en.json
@@ -1,9 +1,40 @@
 {
     "Login" : "Login",
+    "Logout" : "Logout",
 	"Register" : "Register",
 	"User" : "User",
 	"Password" : "Password",
 	"CPassword" : "Confirm password",
     "Enter_your_comment" : "Enter your comment",
-    "Send" : "Send"
+    "Send" : "Send",
+    "Site_title" : "NodeJs Chat",
+    "Chat" : "Chat",
+    "Contact" : "Contact",
+    "About" : "About",
+    "Name" : "Name",
+    "Email" : "E-mail",
+    "Message" : "Message",
+    "About_introduction" : "This is the first application, written on node.js.\nThe only one purpose of this site is learning of basics of web development using Node.js.",
+    "About_modules_list" : "The following node.js modules are used : ",
+    "Enter_your_name" : "Enter your name",
+    "Enter_your_password" : "Enter your password",
+    "Confirm_your_password" : "Confirm your password",
+    "Show_messages" : "Show messages",
+    "Yesterday" : "Yesterday",
+    "7_days" : "7 days",
+    "30_days" : "30 days",
+    "3_months" : "3 months",
+    "6_months" : "6 months",
+    "1_year" : "1 year",
+    "All" : "All",
+    "View" : "View",
+    "of" : "of",
+    "Logout_introduction" : "You are about to logout.",
+    "Logout_content" : "To logout, press the button. You will be automatically logged out and won't be able to access 'chat' page;",
+    "Add_your_name" : "Add your name",
+    "Add_your_e-mail" : "Add your e-mail",
+    "Add_your_message" : "Add your message",
+    "Lushchitskiy_Nickolay" : "Lushchitskiy Nickolay",
+    "Junior_Developer" : "Junior Developer",
+    "Minsk_Belarus" : "Minsk, Belarus"
 }
