--- a/src/locales/translation-ru.json
+++ b/src/locales/translation-ru.json
@@ -1,9 +1,40 @@
 {
-    "Login" : "Логин",
+    "Login" : "Войти",
+    "Logout" : "Выйти",
 	"Register" : "Регистрация",
 	"User" : "Имя",
 	"Password" : "Пароль",
 	"CPassword" : "Подтвердить пароль",
     "Enter_your_comment" : "Введите Ваш комментарий",
-    "Send" : "Отправить"
+    "Send" : "Отправить",
+    "Site_title" : "NodeJs Чат",
+    "Chat" : "Чат",
+    "Contact" : "Связаться",
+    "About" : "О сайте",
+    "Name" : "Имя",
+    "Email" : "E-mail",
+    "Message" : "Сообщение",
+    "About_introduction" : "Это первое приложение, написанное мной на node.js.\nЕдинственной целью данного приложения является изучение основ веб разработки с ипользованием Node.js.",
+    "About_modules_list" : "Следующие модули node.js были использованы : ",
+    "Enter_your_name" : "Введите Ваше имя",
+    "Enter_your_password" : "Введите Ваш пароль",
+    "Confirm_your_password" : "Подтвердите Ваш пароль",
+    "Show_messages" : "Показать сообщения",
+    "Yesterday" : "Вчера",
+    "7_days" : "7 дней",
+    "30_days" : "30 дней",
+    "3_months" : "3 месяца",
+    "6_months" : "6 месяцев",
+    "1_year" : "1 год",
+    "All" : "Все",
+    "View" : "Записи",
+    "of" : "из",
+    "Logout_introduction" : "Вы собираетесь выйти.",
+    "Logout_content" : "Чтобы выйти, нажмите кнопку. Вы автоматически выйдете и не будете иметь доступа к станице чата.",
+    "Add_your_name" : "Добавьте Ваше имя",
+    "Add_your_e-mail" : "Добавьте Ваш e-mail",
+    "Add_your_message" : "Добавьте Ваше сообщение",
+    "Lushchitskiy_Nickolay" : "Лущицкий Николай",
+    "Junior_Developer" : "Начинающий разработчик",
+    "Minsk_Belarus" : "Минск, Беларусь"
 }
